# Tensor_cuda_library

./: CMakeLists.txt
Lib/: CMakeLists.txt  main.cpp
Lib/src/: LibTest.cpp  matrix_1d_2d.js  tensor.cu  tensor1d.cu  tensor2d.cu  tensor2d_kernel.cu
Lib/src/include/: LibTest.h  tensor.cuh  tensor1d.cuh  tensor2d.cuh  tensor2d_kernel.cuh  utils.cuh
test/: CMakeLists.txt  main.cpp
